--- a/SimTECH/SimTECH/Components/SimProgressLinear.razor
+++ b/SimTECH/SimTECH/Components/SimProgressLinear.razor
@@ -1,4 +1,4 @@
-﻿<div class="d-flex flex-row gap-0 pa-0 mud-width-full muted-background-primary" style="@_lineStyles">
+﻿<div class="@_lineClass" style="@_lineStyles">
     @foreach (var (bar, index) in Bars.Select((bar, index) => (bar, index)))
     {
         <span class="py-1 text-center" style="@(BarStyle(bar.Item1, bar.Item2))">
@@ -16,6 +16,15 @@
     [Parameter] public int CalculationDistance { get; set; }
     [Parameter] public double TrackLength { get; set; }
     [Parameter] public ElementSize LineSize { get; set; } = ElementSize.Small;
+
+    private string _lineClass
+    {
+        get
+        {
+            var classes = "d-flex flex-row gap-0 pa-0 mud-width-full fallback-muted-background-primary";
+            return classes;
+        }
+    }
 
     private string _lineStyles
     {
