--- a/SimTECH/SimTECH/Components/SimProgressLinear.razor
+++ b/SimTECH/SimTECH/Components/SimProgressLinear.razor
@@ -1,5 +1,5 @@
 ﻿<div class="@_lineClass" style="@_lineStyles">
-    @foreach (var (bar, index) in Bars.Select((bar, index) => (bar, index)))
+    @foreach (var (bar, index) in Bars.WithIndex())
     {
         <span class="py-1 text-center" style="@(BarStyle(bar.Item1, bar.Item2))">
             @if (AddIndicator && (index % 2 == 0))
