--- a/SimTECH/SimTECH/Pages/Statistics/DriverRecord.razor
+++ b/SimTECH/SimTECH/Pages/Statistics/DriverRecord.razor
@@ -3,7 +3,7 @@
 
 <MudDialog>
     <TitleContent>
-        <MudText Typo="Typo.h3" Class="px-4 py-2">Records among drivers</MudText>
+        <MudText Typo="Typo.h5" Class="px-4 py-2">Records among drivers</MudText>
         <MudText Typo="Typo.body2" Color="Color.Warning">Does net yet filter based on which league</MudText>
     </TitleContent>
     <DialogContent>
@@ -34,7 +34,7 @@
                                     <tr>
                                         <th></th>
                                         <th>Name</th>
-                                        <th>REC</th>
+                                        <th>VAL</th>
                                     </tr>
                                 </thead>
                                 <tbody>
