--- a/SimTECH/SimTECH/Shared/MainLayout.razor
+++ b/SimTECH/SimTECH/Shared/MainLayout.razor
@@ -30,7 +30,7 @@
     </MudAppBar>
     <MudDrawer @bind-Open="@drawerOpen" ClipMode="DrawerClipMode.Always" Variant="DrawerVariant.Responsive">
         <MudDrawerHeader>
-            <MudText Typo="Typo.h5">SimTECH</MudText>
+            <MudText Color="Color.Tertiary" Typo="Typo.h5">SimTECH</MudText>
         </MudDrawerHeader>
         <NavMenu />
     </MudDrawer>
