--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/ConstructorResults.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/ConstructorResults.razor
@@ -58,9 +58,7 @@
                 {
                     @foreach (var result in teamResults)
                     {
-                        <div class="result-cell" style="@(result.GetResultStyle(lowestScoringPosition))">
-                            <MudText Typo="Typo.caption">@result.GetResultText()</MudText>
-                        </div>
+                        <ResultCell Result="@result" LowestScoringPosition="@lowestScoringPosition" OverrideTypo="Typo.caption" />
                     }
                 }
                 else
