--- a/SimTECH/SimTECH/Pages/Test.razor
+++ b/SimTECH/SimTECH/Pages/Test.razor
@@ -60,6 +60,35 @@
                                 <MudPaper Class="pa-3 fallback-muted-background-secondary"></MudPaper>
                                 <MudPaper Class="pa-3 fallback-muted-background-tertiary"></MudPaper>
                             </MudStack>
+
+                            <MudText>Arrows</MudText>
+                            <MudStack>
+                                <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-0">
+                                    <MudText Typo="Typo.caption">5</MudText>
+                                    <MudIcon Icon="@IconCollection.ArrowBadgeRight"></MudIcon>
+                                    <MudText Typo="Typo.caption">5</MudText>
+                                </MudStack>
+                                <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-0">
+                                    <MudText Typo="Typo.caption">5</MudText>
+                                    <MudIcon Icon="@IconCollection.ArrowBigRight"></MudIcon>
+                                    <MudText Typo="Typo.caption">5</MudText>
+                                </MudStack>
+                                <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-0">
+                                    <MudText Typo="Typo.caption">5</MudText>
+                                    <MudIcon Icon="@IconCollection.ArrowBigRightLines"></MudIcon>
+                                    <MudText Typo="Typo.caption">5</MudText>
+                                </MudStack>
+                                <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-0">
+                                    <MudText Typo="Typo.caption">5</MudText>
+                                    <MudIcon Icon="@IconCollection.ArrowNarrowRight"></MudIcon>
+                                    <MudText Typo="Typo.caption">5</MudText>
+                                </MudStack>
+                                <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-0">
+                                    <MudText Typo="Typo.caption">5</MudText>
+                                    <MudIcon Icon="@IconCollection.ArrowRight"></MudIcon>
+                                    <MudText Typo="Typo.caption">5</MudText>
+                                </MudStack>
+                            </MudStack>
                         </MudStack>
                     </MudPaper>
                 </MudItem>
