--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/DriverResults.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/DriverResults.razor
@@ -52,7 +52,12 @@
             </MudTd>
             @foreach (var round in CountryRounds.OrderBy(e => e.Key))
             {
-                <MudTdResult Result="@(context.ResultCells.Find(e => e.Round == round.Key))" LowestScoringPosition="@lowestScoringPosition" />
+                @*<MudTd Class="result-cell">
+                    <ResultCell Result="@(context.ResultCells.Find(e => e.Round == round.Key))"
+                                LowestScoringPosition="@lowestScoringPosition" />
+                </MudTd>*@
+                <MudTdResult Result="@(context.ResultCells.Find(e => e.Round == round.Key))"
+                             LowestScoringPosition="@lowestScoringPosition" />
             }
             <MudTd>
                 <MudText Typo="Typo.caption">@context.Average.ToString("F1")</MudText>
