--- a/SimTECH/SimTECH/Pages/Statistics/DriverCompareStat.razor
+++ b/SimTECH/SimTECH/Pages/Statistics/DriverCompareStat.razor
@@ -57,7 +57,7 @@
                             {
                                 <ApexCharts.ApexChart @ref="chart"
                                                       TItem="DataPoint"
-                                                      Title="Driver compare"
+                                                      Title="Compare drivers"
                                                       Options="@options"
                                                       Height="500"
                                                       Width="@("100%")">
