--- a/SimTECH/SimTECH/Pages/Legacy.razor
+++ b/SimTECH/SimTECH/Pages/Legacy.razor
@@ -50,15 +50,15 @@
                 "Wins",
                 new[]
                 {
-                    new LegacySimData(1, "Filip van der Bergh", Country.NL, 38, "Lolsokje"),
+                    new LegacySimData(1, "Filip van der Bergh", Country.NL, 38, "Sokje"),
                     new LegacySimData(2, "Buzz Hahn", Country.ZA, 36, "Haan"),
                     new LegacySimData(3, "Frankku Piirrellä", Country.FI, 31, "Frank"),
-                    new LegacySimData(4, "", Country.ZA, 22, "AI"),
+                    new LegacySimData(4, "Barack Yobama", Country.FJ, 22, "AI"),
                     new LegacySimData(5, "", Country.ZA, 22, "AI"),
                     new LegacySimData(6, "", Country.ZA, 22, "Dezent"),
                     new LegacySimData(7, "", Country.ZA, 20, "Yoshi"),
                     new LegacySimData(8, "", Country.ZA, 18, "Rex"),
-                    new LegacySimData(9, "", Country.ZA, 18, "Aalp"),
+                    new LegacySimData(9, "Aalp Aca", Country.ZA, 18, "Aalp"),
                     new LegacySimData(10, "", Country.ZA, 18, "Damian"),
                 }
             },
@@ -66,8 +66,8 @@
                 "Championships",
                 new[]
                 {
-                    new LegacySimData(1, "", Country.KP, 1, ""),
-                    new LegacySimData(2, "", Country.KP, 1, ""),
+                    new LegacySimData(1, "Filip van der Bergh", Country.NL, 2, "Sokje"),
+                    new LegacySimData(2, "", Country.KP, 2, ""),
                     new LegacySimData(3, "", Country.KP, 1, ""),
                     new LegacySimData(4, "", Country.KP, 1, ""),
                     new LegacySimData(5, "", Country.KP, 1, ""),
@@ -82,7 +82,7 @@
                 "Podiums",
                 new[]
                 {
-                    new LegacySimData(1, "", Country.KP, 1, ""),
+                    new LegacySimData(1, "Filip van der Bergh", Country.NL, 113, "Sokje"),
                     new LegacySimData(2, "", Country.KP, 1, ""),
                     new LegacySimData(3, "", Country.KP, 1, ""),
                     new LegacySimData(4, "", Country.KP, 1, ""),
@@ -98,7 +98,7 @@
                 "Starts",
                 new[]
                 {
-                    new LegacySimData(1, "", Country.KP, 1, ""),
+                    new LegacySimData(1, "Filip van der Bergh", Country.NL, 549, "Sokje"),
                     new LegacySimData(2, "", Country.KP, 1, ""),
                     new LegacySimData(3, "", Country.KP, 1, ""),
                     new LegacySimData(4, "", Country.KP, 1, ""),
@@ -130,7 +130,7 @@
                 "Poles",
                 new[]
                 {
-                    new LegacySimData(1, "", Country.KP, 1, ""),
+                    new LegacySimData(1, "Filip van der Bergh", Country.NL, 60, "Lolsokje"),
                     new LegacySimData(2, "", Country.KP, 1, ""),
                     new LegacySimData(3, "", Country.KP, 1, ""),
                     new LegacySimData(4, "", Country.KP, 1, ""),
