--- a/SimTECH/SimTECH/Shared/NavMenu.razor
+++ b/SimTECH/SimTECH/Shared/NavMenu.razor
@@ -26,20 +26,14 @@
 
     <MudNavLink Href="/legacy" Match="NavLinkMatch.Prefix" Icon="@IconCollection.Planet">Legacy</MudNavLink>
 
-    <MudNavLink Href="/test" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Lightbulb">Test</MudNavLink>
+    <MudNavLink Href="/credits" Match="NavLinkMatch.Prefix" Icon="@IconCollection.BrandVolkswagen">Credits</MudNavLink>
 
-    @*<MudNavGroup Title="Test" Icon="@IconCollection.Pyramid" @bind-Expanded="@testExpanded">
-        <MudNavLink Href="/test" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Lightbulb">Test</MudNavLink>
-        <MudNavLink Href="/contracts" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.EditNote">Contracts</MudNavLink>
-        <MudNavLink Href="/sponsors" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.EditNote">Sponsors</MudNavLink>
-        <MudNavLink Href="/finances" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.EditNote">Finances</MudNavLink>
-    </MudNavGroup>*@
+    <MudNavLink Href="/test" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Lightbulb">Test</MudNavLink>
 </MudNavMenu>
 
 @code {
     bool entrantsExpanded = true;
     bool factorsExpanded = true;
-    //bool testExpanded = false;
 
     private const string entrantExpansionKey = "entrantMenuExpanded";
     private const string factorExpansionKey = "factorMenuExpanded";
